--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,5 @@ target_link_libraries(web_vfs PRIVATE curl)
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
     enable_testing()
-    add_test(NAME pytest COMMAND env SQLITE_WEB_LOG=99 python3 -m pytest -sv ${CMAKE_CURRENT_SOURCE_DIR}/test)
+    add_test(NAME pytest COMMAND env SQLITE_WEB_LOG=99 MALLOC_CHECK_=1 python3 -m pytest -sv ${CMAKE_CURRENT_SOURCE_DIR}/test)
 endif()
