--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,14 +41,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: dependencies
       run: |
-        brew install python sqlite libmicrohttpd
+        brew install python sqlite libmicrohttpd aria2
         /usr/local/bin/pip3 install $PIP_DEPS
     - name: build
       run: |
         CXXFLAGS="-I$(brew --prefix)/include -I$(brew --prefix)/opt/sqlite/include" \
         LDFLAGS="-L$(brew --prefix)/lib -L$(brew --prefix)/opt/sqlite/lib" \
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.BUILD_TYPE }} \
-                -DCMAKE_PREFIX_PATH=$(brew --prefix)/opt/sqlite \
                 -B build .
         cmake --build build -j 4
     - name: ctest
