--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,10 +45,10 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     FetchContent_MakeAvailable(catch)
     include_directories(${catch_SOURCE_DIR}/single_include)
     add_executable(local_stress_test test/local_stress_test.cc test/test_httpd.cc test/test_httpd.h)
-    target_link_libraries(local_stress_test PRIVATE sqlite3 curl microhttpd)
+    target_link_libraries(local_stress_test PRIVATE sqlite3 curl microhttpd pthread dl)
 
     include(CTest)
     enable_testing()
     add_test(NAME pytest COMMAND env SQLITE_WEB_LOG=99 python3 -m pytest -sv ${CMAKE_CURRENT_SOURCE_DIR}/test)
-    add_test(NAME local_stress_test COMMAND env SQLITE_WEB_LOG=99 local_stress_test)
+    add_test(NAME local_stress_test COMMAND local_stress_test)
 endif()
